# heatmetal

./: .gitignore  Cargo.toml  README.md  imgui.ini  justfile  main.odin
assets/: style_terminal.rgs
game/: game.odin  input.odin  player.odin  player_view.odin  render.odin  state.odin  textures.odin
settings/: hardware.odin  input.odin  limits.odin  settings.odin  values.odin
src/: main.rs
ui/: mainmenu.odin  pausemenu.odin  popup.odin  settings.odin  style.odin  utils.odin  widgets.odin  window.odin
