[package]
name = "heatmetal"
version = "0.1.0"
edition = "2024"

[profile.release]
lto = true
strip = true
debug = false
incremental = false
codegen-units = 1

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 0

[dependencies]
macroquad = "0.4.13"

[build-dependencies]
static_vcruntime = "2.0.0"
