[package]
name = "heatmetal"
version = "0.1.0"
edition = "2024"

[profile.release]
lto = true
strip = true
debug = false
incremental = false
codegen-units = 1

[profile.dev]
package."*".opt-level = 3
opt-level = 0

[dependencies]
imgui = "0.12.0"
raylib = "5.0.2"
raylib_imgui_rs = "0.2.0"

[build-dependencies]
static_vcruntime = "2.0.0"
